fixed a bug in the create user